--- a/src/main/webapp/WEB-INF/taobao/product.html
+++ b/src/main/webapp/WEB-INF/taobao/product.html
@@ -17,8 +17,8 @@ var selected1 = "";
 
 				<tr>
 					<td>
-						<label for="j_num_lid" class="control-label x85">产品号</label>
-						<input type="text" name="num_lid" id="j_num_lid" value="${product.num_lid!}" data-rule="" size="20">
+						<label for="j_num_iid" class="control-label x85">产品号</label>
+						<input type="text" name="num_iid" id="j_num_iid" value="${product.num_iid!}" data-rule="" size="20">
 		            </td>
 		        </tr>
 
