--- a/src/main/webapp/WEB-INF/taobao/product_list.html
+++ b/src/main/webapp/WEB-INF/taobao/product_list.html
@@ -12,8 +12,8 @@ var selected1 = "";
 
 		<div class="bjui-searchBar">
 
-				<label for="j_num_lid">产品号：</label>
-				<input type="text"  id="j_num_lid" name="num_lid" value="${product.num_lid!}" class="form-control" size="10"/>
+				<label for="j_num_iid">产品号：</label>
+				<input type="text"  id="j_num_iid" name="num_iid" value="${product.num_iid!}" class="form-control" size="10"/>
 
 			<button type="submit" class="btn-default" data-icon="search">查询</button>
 			<a class="btn btn-orange" href="javascript:;" data-toggle="reloadsearch" data-clear-query="true" data-icon="undo">清空查询</a>
@@ -75,7 +75,7 @@ var selected1 = "";
 
 
 			<td>
-				 ${obj.num_lid!}
+				 ${obj.num_iid!}
 			</td>
 
 
